made content changes to index and style changes in css

--- a/templates/article.html
+++ b/templates/article.html
@@ -1,5 +1,5 @@
 <article
-  class="clearfix"
+  class="five columns"
   data-author="{{authorSlug}}"
   data-category="{{categorySlug}}">
   <header>
