--- a/styles/modules.css
+++ b/styles/modules.css
@@ -47,6 +47,19 @@
   float: right;
 }
 
+main {
+  color: #4d4e53;
+}
+
+main img {
+  max-height:75%;
+  max-width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+}
+
 .main-nav {
   padding: .01em;
 }
